crates/ruff_python_parser/tests/snapshots/invalid_syntax@walrus_before_py38.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/walrus_before_py38.py
---
## AST

```
Module(
    ModModule {
        range: 0..60,
        body: [
            If(
                StmtIf {
                    range: 45..59,
                    test: Named(
                        ExprNamed {
                            range: 48..54,
                            target: Name(
                                ExprName {
                                    range: 48..49,
                                    id: Name("x"),
                                    ctx: Store,
                                },
                            ),
                            value: NumberLiteral(
                                ExprNumberLiteral {
                                    range: 53..54,
                                    value: Int(
                                        1,
                                    ),
                                },
                            ),
                        },
                    ),
                    body: [
                        Expr(
                            StmtExpr {
                                range: 56..59,
                                value: EllipsisLiteral(
                                    ExprEllipsisLiteral {
                                        range: 56..59,
                                    },
                                ),
                            },
                        ),
                    ],
                    elif_else_clauses: [],
                },
            ),
        ],
    },
)
```
## Unsupported Syntax Errors

  |
1 | # parse_options: { "target_version": "3.7" }
2 | if x := 1: ...
  |    ^^^^^^ Syntax Error: Cannot use named assignment expression (`:=`) on Python 3.7 (syntax was added in Python 3.8)
  |
