crates/ruff_python_parser/tests/snapshots/invalid_syntax@walrus_slice_parse_error.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/walrus_slice_parse_error.py
---
## AST

```
Module(
    ModModule {
        range: 0..131,
        body: [
            Expr(
                StmtExpr {
                    range: 118..130,
                    value: Subscript(
                        ExprSubscript {
                            range: 118..130,
                            value: Name(
                                ExprName {
                                    range: 118..121,
                                    id: Name("lst"),
                                    ctx: Load,
                                },
                            ),
                            slice: Slice(
                                ExprSlice {
                                    range: 122..129,
                                    lower: Some(
                                        Named(
                                            ExprNamed {
                                                range: 122..126,
                                                target: Name(
                                                    ExprName {
                                                        range: 122..123,
                                                        id: Name("x"),
                                                        ctx: Store,
                                                    },
                                                ),
                                                value: NumberLiteral(
                                                    ExprNumberLiteral {
                                                        range: 125..126,
                                                        value: Int(
                                                            1,
                                                        ),
                                                    },
                                                ),
                                            },
                                        ),
                                    ),
                                    upper: Some(
                                        UnaryOp(
                                            ExprUnaryOp {
                                                range: 127..129,
                                                op: USub,
                                                operand: NumberLiteral(
                                                    ExprNumberLiteral {
                                                        range: 128..129,
                                                        value: Int(
                                                            1,
                                                        ),
                                                    },
                                                ),
                                            },
                                        ),
                                    ),
                                    step: None,
                                },
                            ),
                            ctx: Load,
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | # parse_options: {"target-version": "3.9"}
2 | # before 3.10, only emit the parse error, not the unsupported syntax error
3 | lst[x:=1:-1]
  |     ^^^^ Syntax Error: Unparenthesized named expression cannot be used here
  |
